# Delusion

./: pyproject.toml  readme.md
.github/workflows/: release.yml
delusion/: __init__.py  cache.py  types.py
delusion/chat/: __init__.py
delusion/chat/router/: __init__.py  _ollama.py
tests/: chat.py  test_chat.py
