[project]
name        = "delusion"
description = "✨ A minimal generative models router"
version     = "0.2.2"
readme      = "readme.md"
license     = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cachetools",
    "diskcache",
    "ollama",
    "platformdirs",
    "pydantic",
]

[project.urls]
GitHub = "https://github.com/BrokenSource/Delusion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
