[project]
name        = "delusion"
description = "✨ The missing conveniences in generative models"
version     = "0.2.2"
license     = "MIT"
readme      = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools",
    "diskcache",
    "ollama",
    "platformdirs",
    "pydantic",
]

[project.urls]
GitHub = "https://github.com/BrokenSource/Delusion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
